tests/sources/should-not-compile/wrong-loops.c
int x = 10;
int y = 0;

for (int i = 0 i < 10 i++)
{
    x = x + i;
}

for (int i = 0; i < 10; i++)
{}

for (int i = 0; i < 10; i + 1)
{
    y = y + i;
}

for (int i = 0; i < 10;)
{
    y = y + i;
}

for (int i = 0; if(i < 10); i++)
{
    x = x + i;
}

for int i = 0 i < 10 i++)  x = x + i;

while (x < 10;)
{
    x++;
}

while x < 10;
{
    x++;
}

while (x +) y++;

do x++ while x < 5;

do { x++; } while;

do x++; while x+;

do y++;

repeat x++; until x > 10;

repeat y++ until;

repeat until (y > 10);

repeat y++;